[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ui-service"
version = "0.1.0"
description = "Static UI server with SSE bridge for project progress"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "redis[hiredis]",
    "structlog",
    "httpx",
    "shared @ file:../shared"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]


