[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ui-service"
version = "0.1.0"
description = "Static UI server with SSE bridge for project progress"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "redis[hiredis]",
    "structlog",
    "httpx",
    "itsdangerous>=2.1.2",
    "Authlib>=1.3.0",
    "msal>=1.31.0",
    "cryptography>=41.0.0",
    "shared @ file:../shared"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23.0",
    "httpx",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]


