[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ui-service"
version = "0.1.0"
description = "Static UI server with SSE bridge for project progress"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.121.0",
    "uvicorn==0.38.0",
    "redis[hiredis]==7.0.1",
    "structlog==25.5.0",
    "httpx==0.28.1",
    "itsdangerous==2.2.0",
    "msal==1.34.0",
    "cryptography==46.0.3",
    "shared @ file:../shared"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23.0",
    "httpx==0.28.1"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]


