[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "news-processor-service"
version = "0.1.0"
description = "News Processor Service - Enriches raw news articles with AI analysis"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi[standard]",
    "httpx",
    "pydantic-settings",
    "python-dotenv",
    "azure-appconfiguration-provider",
    "azure-identity",
    "openai",
    "asyncio",
    "news_sentiment_common @ file:../common"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"] 