[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-api-service"
version = "0.1.0"
description = "News Sentiment Score API Service (NSSS) - Calculates and serves aggregated sentiment scores for fixed-income instruments."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi[standard]",
    "httpx",
    "pydantic-settings",
    "python-dotenv",
    "azure-appconfiguration-provider",
    "azure-identity",
    "pyyaml",
    "news_sentiment_common @ file:../common"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"] 